--- a/MythBots/src/app/app.component.html
+++ b/MythBots/src/app/app.component.html
@@ -1,8 +1,5 @@
-<nav>
-  <ul>
-    <li><a routerLink="/contactanos">Contáctanos</a></li>
-    <li><a routerLink="/configuracion-perfil">Configuración de Perfil</a></li>
-  </ul>
-</nav>
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<main>
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
