--- a/MythBots/src/app/components/paths/contactanos/contactanos.component.html
+++ b/MythBots/src/app/components/paths/contactanos/contactanos.component.html
@@ -1,13 +1,21 @@
-<h1>Contáctanos</h1>
-<form>
-  <label for="nombre">Nombre:</label>
-  <input id="nombre" type="text">
+<div class="contact-us-container">
+  <div class="contact-form">
+    <h2>Contactanos</h2>
+
+    <label for="name">Nombre:</label>
+    <input type="text" id="name" required />
+
+    <label for="email">Correo:</label>
+    <input type="email" id="email" required />
+
+    <label for="file">Subir archivo:</label>
+    <input type="file" id="file" />
+
+    <label for="message">Mensaje:</label>
+    <textarea id="message" rows="4" required></textarea>
+
+    <button class="send-button">Enviar</button>
+  </div>
   
-  <label for="email">Email:</label>
-  <input id="email" type="email">
-  
-  <label for="mensaje">Mensaje:</label>
-  <textarea id="mensaje"></textarea>
-  
-  <button type="submit">Enviar</button>
-</form>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541" alt="Compañía" class="company-image" />
+</div>
