--- a/MythBots/src/app/components/paths/contactanos/contactanos.component.scss
+++ b/MythBots/src/app/components/paths/contactanos/contactanos.component.scss
@@ -1,12 +1,61 @@
-form {
-    display: flex;
-    flex-direction: column;
-    
-    input, textarea {
-      margin-bottom: 10px;
-    }
-    
-    button {
-      width: 100px;
-    }
+.contact-us-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  height: 100vh;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  margin-right: 20px;
+}
+
+.company-image {
+  max-width: 150px;
+  height: auto;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+textarea {
+  resize: none;
+}
+
+.send-button {
+  background-color: #FF6B00;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #0056b3;
   }
+}
