--- a/MythBots/src/_variables.scss
+++ b/MythBots/src/_variables.scss
@@ -36,7 +36,7 @@ $color-tertiary-7: #ffa666;
 $color-tertiary-8: #ffc499;
 $color-tertiary-9: #ffe1cc;
 
-// Colores adicionales
+// Colores adicionales (ByN)
 $color-white: #FFFFFF;
 $color-black: #000000;
 
