--- a/MythBots/src/app/components/layout/navbar/navbar.component.html
+++ b/MythBots/src/app/components/layout/navbar/navbar.component.html
@@ -1,1 +1,27 @@
-<p>navbar works!</p>
+<nav class="navbar">
+    <div class="navbar-frame">
+        <div class="navbar-logo"></div> <!-- Logo de la empresa -->
+        <div class="navbar-separator"></div>
+        <div class="navbar-frame__menu">
+            <div class="navbar-item navbar-item--3d-print">
+                <span class="navbar-item__text">3D Print</span>
+            </div>
+            <div class="navbar-item navbar-item--pcb-design">
+                <span class="navbar-item__text">PCB Design</span>
+            </div>
+            <div class="navbar-item navbar-item--create-funko">
+                <span class="navbar-item__text">Create Funko</span>
+            </div>
+            <div class="navbar-item navbar-item--courses">
+                <span class="navbar-item__text">Courses</span>
+            </div>
+            <div class="navbar-item navbar-item--educational-robotics">
+                <span class="navbar-item__text">Educational Robotics</span>
+            </div>
+            <div class="navbar-item navbar-item--contact">
+                <span class="navbar-item__text">Contact</span>
+            </div>
+        </div>
+        <div class="navbar-account"></div> <!-- Icono de cuenta de usuario -->
+    </div>
+</nav>
