--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -1,1 +1,51 @@
-<p>footer works!</p>
+<footer class="footer">
+    <!-- Sección 1: Logo y slogan -->
+    <div class="footer__section-1">
+        <div class="footer__section-1__logo">
+            <img src="ruta-al-logo.png" alt="Logo" class="footer__logo__image">
+        </div>
+        <div class="footer__section-1__slogan">
+            <p class="footer__slogan__text">
+                textotextotextotextotextotexto<br>textotextotextotextotextotexto<br>textotextotextotextotextotexto<br>textotextotextotextotextotexto
+            </p>
+        </div>
+    </div>
+
+    <!-- Sección 2: Enlaces -->
+    <div class="footer__section-2">
+        <div class="footer__links">
+            <ul>
+                <li>Acerca de</li>
+                <li>Historia</li>
+                <li>Quiénes somos</li>
+            </ul>
+        </div>
+        <div class="footer__links">
+            <ul>
+                <li>Productos</li>
+                <li>Servicios</li>
+                <li>Cursos</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Sección 3: Contactos -->
+    <div class="footer__section-3">
+        <h3 class="footer__contacts__title">Contactos</h3>
+        <ul class="footer__contacts">
+            <li><span class="footer__contact__icon">•</span> +52 123 123 123</li>
+            <li><span class="footer__contact__icon">•</span> correogmail.com</li>
+        </ul>
+    </div>
+
+    <!-- Sección 4: Redes Sociales -->
+    <div class="footer__section-4">
+        <h3 class="footer__social__title">Social</h3>
+        <div class="footer__social__icons">
+            <span class="footer__social__icon"></span>
+            <span class="footer__social__icon"></span>
+            <span class="footer__social__icon"></span>
+            <span class="footer__social__icon"></span>
+        </div>
+    </div>
+</footer>
