Modificaciones para el footer, se le añadio responsive, y estructura.

--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -1,18 +1,19 @@
 <footer class="footer">
     <!-- Sección 1: Logo y slogan -->
-    <div class="footer__section-1">
-        <div class="footer__section-1__logo">
+    <section class="footer__section footer__section--logo">
+        <div class="footer__logo">
             <img src="ruta-al-logo.png" alt="Logo" class="footer__logo__image">
         </div>
-        <div class="footer__section-1__slogan">
+        <div class="footer__slogan">
             <p class="footer__slogan__text">
-                textotextotextotextotextotexto<br>textotextotextotextotextotexto<br>textotextotextotextotextotexto<br>textotextotextotextotextotexto
+                El mejor servicio para ti<br>
+                Con calidad y confianza
             </p>
         </div>
-    </div>
+    </section>
 
     <!-- Sección 2: Enlaces -->
-    <div class="footer__section-2">
+    <section class="footer__section footer__section--links">
         <div class="footer__links">
             <ul>
                 <li>Acerca de</li>
@@ -20,6 +21,10 @@
                 <li>Quiénes somos</li>
             </ul>
         </div>
+    </section>
+
+    <!-- Sección 3: Enlaces -->
+    <section class="footer__section footer__section--links">
         <div class="footer__links">
             <ul>
                 <li>Productos</li>
@@ -27,25 +32,25 @@
                 <li>Cursos</li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <!-- Sección 3: Contactos -->
-    <div class="footer__section-3">
+    <!-- Sección 4: Contactos -->
+    <section class="footer__section footer__section--contacts">
         <h3 class="footer__contacts__title">Contactos</h3>
         <ul class="footer__contacts">
-            <li><span class="footer__contact__icon">•</span> +52 123 123 123</li>
-            <li><span class="footer__contact__icon">•</span> correogmail.com</li>
+            <li><span class="footer__contact__icon">📞</span> +52 123 123 123</li>
+            <li><span class="footer__contact__icon">📧</span> correogmail.com</li>
         </ul>
-    </div>
+    </section>
 
-    <!-- Sección 4: Redes Sociales -->
-    <div class="footer__section-4">
+    <!-- Sección 5: Redes Sociales -->
+    <section class="footer__section footer__section--social">
         <h3 class="footer__social__title">Social</h3>
         <div class="footer__social__icons">
-            <span class="footer__social__icon"></span>
-            <span class="footer__social__icon"></span>
-            <span class="footer__social__icon"></span>
-            <span class="footer__social__icon"></span>
+            <span class="footer__social__icon">red1</span>
+            <span class="footer__social__icon">red2</span>
+            <span class="footer__social__icon">red3</span>
+            <span class="footer__social__icon">red4</span>
         </div>
-    </div>
+    </section>
 </footer>
