--- a/MythBots/src/app/components/layout/footer/footer.component.scss
+++ b/MythBots/src/app/components/layout/footer/footer.component.scss
@@ -2,101 +2,112 @@
 
 .footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
-    padding: 40px;
-    background: linear-gradient(to right, #5a0c3c, #1a002B);
-    color: white;
+    padding: 0px;
+    background: $footer-gradient;
+    color: $color-white;
 
-    &__section-1,
-    &__section-2,
-    &__section-3,
-    &__section-4 {
+    &__section {
         flex: 1;
-        margin: 0 20px;
-    }
-
-    &__section-1 {
         display: flex;
         flex-direction: column;
-        color: $color-white;
+        justify-content: flex-end; // Para que los elementos inicien desde abajo hacia arriba
+        margin: 20px;
+        max-width: 300px;
 
-        &__logo {
-            &__image {
-                width: 120px;
-                height: auto;
-                margin-bottom: 20px;
-            }
+        &--logo {
+            align-items: flex-start; // El logo alineado a la izquierda
         }
 
-        &__slogan {
-            &__title {
-                font-size: 24px;
-                margin-bottom: 10px;
-            }
-
-            &__text {
-                font-size: 16px;
-                line-height: 1.5;
-            }
+        &--links,
+        &--contacts,
+        &--social {
+            align-items: flex-start;
         }
     }
 
-    &__section-2 {
-        display: flex;
-        justify-content: space-between;
-
-        &__links {
-            ul {
-                list-style: none;
-                padding: 0;
-
-                li {
-                    margin-bottom: 10px;
-                    font-size: 16px;
-                }
-            }
+    .footer__logo {
+        &__image {
+            width: 120px;
+            height: auto;
+            margin-bottom: 20px;
         }
     }
 
-    &__section-3 {
-        &__contacts {
+    .footer__slogan {
+        &__text {
+            font-size: 16px;
+            line-height: 1.5;
+            max-width: 280px;
+            word-wrap: break-word;
+        }
+    }
+
+    .footer__links {
+        ul {
             list-style: none;
             padding: 0;
 
             li {
                 margin-bottom: 10px;
                 font-size: 16px;
-
-                .footer__contact__icon {
-                    margin-right: 10px;
-                    font-size: 24px;
-                }
             }
-        }
-
-        &__title {
-            font-size: 24px;
-            margin-bottom: 10px;
         }
     }
 
-    &__section-4 {
-        &__social__title {
-            font-size: 24px;
+    .footer__contacts {
+        list-style: none;
+        padding: 0;
+
+        li {
+            display: flex;
+            align-items: center;
             margin-bottom: 10px;
+            font-size: 16px;
+
+            .footer__contact__icon {
+                margin-right: 10px;
+                font-size: 24px;
+            }
+        }
+    }
+
+    .footer__social__icons {
+        display: flex;
+        gap: 20px;
+
+        &__icon {
+            width: 40px;
+            height: 40px;
+            background-color: $color-gray-3;
+            border-radius: 50%;
+        }
+    }
+
+    // Responsive
+    @media (max-width: $breakpoint-tablet) {
+        flex-direction: column; // En tablets, mostrar en columna
+        align-items: center;
+        text-align: center;
+
+        &__section {
+            max-width: 100%;
+        }
+    }
+
+    @media (max-width: $breakpoint-mobile) {
+        &__section {
+            margin: 10px;
         }
 
-        &__social__icons {
-            display: flex;
-            gap: 20px;
+        .footer__logo__image {
+            width: 100px;
+        }
 
-            &__icon {
-                width: 40px;
-                height: 40px;
-                background-color: #cccccc;
-                border-radius: 50%;
-            }
+        .footer__contacts li,
+        .footer__links li {
+            font-size: 14px;
         }
     }
 }
