Pequeña modificacion en el footer en el gradiente

--- a/MythBots/src/_variables.scss
+++ b/MythBots/src/_variables.scss
@@ -52,7 +52,7 @@ $color-gray-8: #212121;
 
 // Degradados
 $background-gradient: linear-gradient(to right, #42006B, #E64CAB);
-$footer-gradient: linear-gradient(to right, #5a0c3c, #1a002b);
+$footer-gradient: linear-gradient(to left, #5a0c3c, #1a002b);
 
 // Breakpoints para responsive design
 $breakpoint-desktop: 1024px;
