Estructura del footer, casi terminado

--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -1,21 +1,25 @@
 <footer class="footer">
-    <!-- Sección 1: Logo y slogan -->
+    <!-- Sección 1: Logo y Eslogan -->
     <section class="footer__section footer__section--logo">
-        <div class="footer__logo">
-            <img src="ruta-al-logo.png" alt="Logo" class="footer__logo__image">
+        <div class="footer__section-title">
+            <img src="../../../../../public/resources/mythbots_logo.png" alt="Logo" class="footer__logo-image" />
         </div>
-        <div class="footer__slogan">
-            <p class="footer__slogan__text">
-                El mejor servicio para ti<br>
-                Con calidad y confianza
+        <div class="footer__section-content">
+            <p class="footer__slogan">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..
+                t enim ad minim veniam, quis nostrud exercitation ullamco laboris
             </p>
         </div>
     </section>
 
-    <!-- Sección 2: Enlaces -->
-    <section class="footer__section footer__section--links">
-        <div class="footer__links">
-            <ul>
+    <!-- Sección 2: Historia -->
+    <section class="footer__section footer__section--history">
+        <div class="footer__section-title">
+            <h3>Historia</h3>
+        </div>
+        <div class="footer__section-content">
+            <ul class="footer__list">
                 <li>Acerca de</li>
                 <li>Historia</li>
                 <li>Quiénes somos</li>
@@ -23,10 +27,13 @@
         </div>
     </section>
 
-    <!-- Sección 3: Enlaces -->
-    <section class="footer__section footer__section--links">
-        <div class="footer__links">
-            <ul>
+    <!-- Sección 3: Servicios -->
+    <section class="footer__section footer__section--services">
+        <div class="footer__section-title">
+            <h3>Servicios</h3>
+        </div>
+        <div class="footer__section-content">
+            <ul class="footer__list">
                 <li>Productos</li>
                 <li>Servicios</li>
                 <li>Cursos</li>
@@ -36,21 +43,31 @@
 
     <!-- Sección 4: Contactos -->
     <section class="footer__section footer__section--contacts">
-        <h3 class="footer__contacts__title">Contactos</h3>
-        <ul class="footer__contacts">
-            <li><span class="footer__contact__icon">📞</span> +52 123 123 123</li>
-            <li><span class="footer__contact__icon">📧</span> correogmail.com</li>
-        </ul>
+        <div class="footer__section-title">
+            <h3>Contactos</h3>
+        </div>
+        <div class="footer__section-content">
+            <ul class="footer__list">
+                <li><span class="footer__icon">📞</span> +52 123 123 123</li>
+                <li><span class="footer__icon">📧</span> correogmail.com</li>
+            </ul>
+        </div>
     </section>
 
     <!-- Sección 5: Redes Sociales -->
     <section class="footer__section footer__section--social">
-        <h3 class="footer__social__title">Social</h3>
-        <div class="footer__social__icons">
-            <span class="footer__social__icon">red1</span>
-            <span class="footer__social__icon">red2</span>
-            <span class="footer__social__icon">red3</span>
-            <span class="footer__social__icon">red4</span>
+        <div class="footer__section-title">
+            <h3>Social</h3>
+        </div>
+        <div class="footer__section-content footer__icons">
+            <a href="#" class="footer__icon">🌐</a>
+            <a href="#" class="footer__icon">🐦</a>
+            <a href="#" class="footer__icon">📘</a>
+            <a href="#" class="footer__icon">📸</a>
+            <a href="#" class="footer__icon">📘</a>
+            <a href="#" class="footer__icon">📸</a>
+            <a href="#" class="footer__icon">📘</a>
+            <a href="#" class="footer__icon">📸</a>
         </div>
     </section>
 </footer>
