--- a/MythBots/src/app/components/layout/footer/footer.component.scss
+++ b/MythBots/src/app/components/layout/footer/footer.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0px;
+    padding: 0;
     background: $footer-gradient;
     color: $color-white;
 
@@ -12,51 +12,40 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end; // Para que los elementos inicien desde abajo hacia arriba
         margin: 20px;
         max-width: 300px;
 
-        &--logo {
-            align-items: flex-start; // El logo alineado a la izquierda
+        &--logo, &--history, &--services, &--contacts, &--social {
+            align-items: flex-start;
         }
 
-        &--links,
-        &--contacts,
-        &--social {
-            align-items: flex-start;
+        &-title {
+            margin-bottom: 10px;
+
+            h3 {
+                font-weight: bold;
+                font-size: 24px;
+            }
+        }
+
+        &-content {
+            font-size: 16px;
+            line-height: 1.5;
         }
     }
 
-    .footer__logo {
-        &__image {
-            width: 120px;
-            height: auto;
-            margin-bottom: 20px;
-        }
+    .footer__logo-image {
+        width: 120px;
+        height: auto;
+        margin-bottom: 20px;
     }
 
     .footer__slogan {
-        &__text {
-            font-size: 16px;
-            line-height: 1.5;
-            max-width: 280px;
-            word-wrap: break-word;
-        }
+        max-width: 280px;
+        word-wrap: break-word;
     }
 
-    .footer__links {
-        ul {
-            list-style: none;
-            padding: 0;
-
-            li {
-                margin-bottom: 10px;
-                font-size: 16px;
-            }
-        }
-    }
-
-    .footer__contacts {
+    .footer__list {
         list-style: none;
         padding: 0;
 
@@ -64,32 +53,36 @@
             display: flex;
             align-items: center;
             margin-bottom: 10px;
-            font-size: 16px;
 
-            .footer__contact__icon {
+            span {
                 margin-right: 10px;
-                font-size: 24px;
             }
         }
     }
 
-    .footer__social__icons {
+    .footer__icons {
         display: flex;
         gap: 20px;
-
-        &__icon {
-            width: 40px;
-            height: 40px;
-            background-color: $color-gray-3;
-            border-radius: 50%;
-        }
+        flex-wrap: wrap;
     }
 
-    // Responsive
-    @media (max-width: $breakpoint-tablet) {
-        flex-direction: column; // En tablets, mostrar en columna
+    .footer__icon {
+        width: 40px;
+        height: 40px;
+        background-color: $color-gray-3;
+        border-radius: 50%;
+        display: flex;
         align-items: center;
-        text-align: center;
+        justify-content: center;
+        text-decoration: none;
+        color: inherit;
+        font-size: 24px;
+    }
+
+    // Responsivo
+    @media (max-width: $breakpoint-tablet) {
+        flex-direction: column;
+        align-items: center;
 
         &__section {
             max-width: 100%;
@@ -101,12 +94,11 @@
             margin: 10px;
         }
 
-        .footer__logo__image {
+        .footer__logo-image {
             width: 100px;
         }
 
-        .footer__contacts li,
-        .footer__links li {
+        .footer__list li {
             font-size: 14px;
         }
     }
