--- a/MythBots/src/app/components/layout/footer/footer.component.scss
+++ b/MythBots/src/app/components/layout/footer/footer.component.scss
@@ -15,7 +15,11 @@
         margin: 20px;
         max-width: 300px;
 
-        &--logo, &--history, &--services, &--contacts, &--social {
+        &--logo,
+        &--history,
+        &--services,
+        &--contacts,
+        &--social {
             align-items: flex-start;
         }
 
@@ -34,17 +38,21 @@
         }
     }
 
+    //Logotipo
     .footer__logo-image {
         width: 120px;
         height: auto;
         margin-bottom: 20px;
     }
 
+    //Eslogan
     .footer__slogan {
         max-width: 280px;
         word-wrap: break-word;
     }
 
+    //Lista Seccion 2-3
+    /*
     .footer__list {
         list-style: none;
         padding: 0;
@@ -59,7 +67,37 @@
             }
         }
     }
+    */
 
+    //Lista Sección 4: Contactos
+    .footer__list {
+        list-style: none;
+        padding: 0;
+
+        li {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+                border-radius: 5px;
+            }
+
+            span {
+                margin-right: 10px;
+                display: flex;
+                align-items: center;
+
+                &:hover {
+                    color: $color-secondary;
+                }
+            }
+        }
+    }
+
+    //Iconos de Redes Sociales
     .footer__icons {
         display: flex;
         gap: 20px;
@@ -67,9 +105,9 @@
     }
 
     .footer__icon {
-        width: 40px;
-        height: 40px;
-        background-color: $color-gray-3;
+        width: 60px;
+        height: 60px;
+        background-color: transparent;
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -77,6 +115,32 @@
         text-decoration: none;
         color: inherit;
         font-size: 24px;
+        transition: transform 0.3s, box-shadow 0.3s;
+
+        &:hover {
+            transform: scale(1.3);
+            box-shadow: 0 0 10px 5px $color-secondary;
+        }
+
+        &::after {
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 12px;
+            opacity: 0;
+            transition: opacity 0.3s;
+            pointer-events: none;
+        }
+
+        &:hover::after {
+            opacity: 1;
+        }
     }
 
     // Responsivo
