--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -54,8 +54,13 @@
             <h3>Social</h3>
         </div>
         <div class="footer__section-content footer__icons">
-            <a *ngFor="let link of socialLinks" [href]="link.url" target="_blank" class="footer__icon"
-                [attr.aria-label]="link.name" [style.background-color]="link.color" [attr.data-tooltip]="link.name">
+            <a *ngFor="let link of socialLinks"
+                    [href]="link.url"
+                    target="_blank"
+                    class="footer__icon"
+                    [attr.aria-label]="link.name"
+                    [style.background-color]="link.color"
+                    [attr.data-tooltip]="link.name">
                 <i [class]="link.icon"></i>
             </a>
         </div>
