--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -16,7 +16,9 @@
         </div>
         <div class="footer__section-content">
             <ul class="footer__list">
-                <li *ngFor="let item of historyItems">{{ item }}</li>
+                <li *ngFor="let item of historyItems">
+                    <a [routerLink]="item.link">{{ item.text }}</a> <!-- Enlace interno -->
+                </li>
             </ul>
         </div>
     </section>
@@ -28,7 +30,9 @@
         </div>
         <div class="footer__section-content">
             <ul class="footer__list">
-                <li *ngFor="let item of serviceItems">{{ item }}</li>
+                <li *ngFor="let item of serviceItems">
+                    <a [routerLink]="item.link">{{ item.text }}</a> <!-- Enlace interno -->
+                </li>
             </ul>
         </div>
     </section>
@@ -41,8 +45,10 @@
         <div class="footer__section-content">
             <ul class="footer__list">
                 <li *ngFor="let contact of contacts" class="footer__contact">
-                    <span class="footer__icon"><i [class]="contact.icon"></i></span>
-                    {{ contact.text }}
+                    <a [href]="contact.url" target="_blank" rel="noopener noreferrer" class="footer__contact-link">
+                        <span class="footer__icon"><i [class]="contact.icon"></i></span>
+                        {{ contact.text }}
+                    </a>
                 </li>
             </ul>
         </div>
@@ -54,13 +60,8 @@
             <h3>Social</h3>
         </div>
         <div class="footer__section-content footer__icons">
-            <a *ngFor="let link of socialLinks"
-                    [href]="link.url"
-                    target="_blank"
-                    class="footer__icon"
-                    [attr.aria-label]="link.name"
-                    [style.background-color]="link.color"
-                    [attr.data-tooltip]="link.name">
+            <a *ngFor="let link of socialLinks" [href]="link.url" target="_blank" class="footer__icon"
+                [attr.aria-label]="link.name" [style.background-color]="link.color" [attr.data-tooltip]="link.name">
                 <i [class]="link.icon"></i>
             </a>
         </div>
