--- a/MythBots/src/app/components/layout/footer/footer.component.scss
+++ b/MythBots/src/app/components/layout/footer/footer.component.scss
@@ -61,7 +61,7 @@
             align-items: center;
             margin-bottom: 10px;
             position: relative;
-            overflow: hidden; // Para evitar que la línea sobresalga
+            overflow: hidden;   //evitar que la línea sobresalga
             cursor: pointer;
 
             // Efecto subrayado al pasar el mouse
@@ -80,6 +80,12 @@
                 width: 100%;
             }
 
+            a {
+                text-decoration: none;
+                color: inherit;
+
+            }
+
             span {
                 margin-right: 10px;
                 display: flex;
@@ -92,6 +98,19 @@
             }
         }
     }
+
+    //Seccion de contacto
+    .footer__contact-link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+            color: $color-secondary;
+        }
+    }
+
 
     // Iconos de Redes Sociales
     .footer__icons {
