--- a/MythBots/src/app/components/paths/home/home.component.html
+++ b/MythBots/src/app/components/paths/home/home.component.html
@@ -1,1 +1,63 @@
-<p>home works!</p>
+<div class="base-plantilla">
+    <!-- Sección Impar -->
+    <section class="seccion impar">
+        <article class="impar-content">
+            <header class="impar-text">
+                <h1 class="titulo">3D Print</h1>
+                <p class="descripcion">
+                    Lorem ipsum odor amet, consectetuer adipiscing elit. Tristique elit viverra tristique ad quam
+                    aliquet. Potenti vulputate hac torquent ad ultrices, hendrerit vehicula ligula? Id quis vitae
+                    nostra, rhoncus sodales hendrerit. Eget sed curabitur a felis donec facilisis placerat. Magna mauris
+                    pellentesque lacus curabitur pulvinar ad torquent nulla. Blandit potenti porta arcu interdum
+                    ridiculus placerat finibus. Mus nibh habitasse potenti tempor semper netus hac non. Justo lacinia
+                    posuere donec fusce consequat lobortis; aenean mattis netus!
+                    Phasellus bibendum erat auctor posuere tincidunt sit. Eleifend ad aenean cras luctus taciti eros
+                    arcu eu. Mattis suspendisse parturient felis parturient aptent. Vitae ligula ante efficitur integer
+                    ullamcorper natoque metus pulvinar. Arcu blandit varius quam a massa augue. Accumsan eleifend proin
+                    aenean volutpat ad sodales. Netus praesent ipsum dolor dapibus sapien non.
+                </p>
+                <button class="boton learn-more boton-naranja">
+                    <span class="circulo">
+                        <span class="icono flecha"></span>
+                    </span>
+                    <span class="texto-boton">Conocer más </span>
+                </button>
+            </header>
+            <figure class="impar-imagen">
+                <img src="assets/imagen-3dprint.jpg" alt="3D Print"
+                    onerror="this.style.background='#e0e0e0'; this.src='';" />
+            </figure>
+        </article>
+    </section>
+
+    <!-- Sección Par -->
+    <section class="seccion par">
+        <article class="par-content">
+            <figure class="par-imagen">
+                <img src="assets/imagen-pcb.jpg" alt="PCB Design"
+                    onerror="this.style.background='#e0e0e0'; this.src='';" />
+            </figure>
+            <header class="par-text">
+                <h1 class="titulo">PCB Design</h1>
+                <p class="descripcion">
+                    Lorem ipsum odor amet, consectetuer adipiscing elit. Tristique elit viverra tristique ad quam
+                    aliquet. Potenti vulputate hac torquent ad ultrices, hendrerit vehicula ligula? Id quis vitae
+                    nostra, rhoncus sodales hendrerit. Eget sed curabitur a felis donec facilisis placerat. Magna mauris
+                    pellentesque lacus curabitur pulvinar ad torquent nulla. Blandit potenti porta arcu interdum
+                    ridiculus placerat finibus. Mus nibh habitasse potenti tempor semper netus hac non. Justo lacinia
+                    posuere donec fusce consequat lobortis; aenean mattis netus!
+                    Phasellus bibendum erat auctor posuere tincidunt sit. Eleifend ad aenean cras luctus taciti eros
+                    arcu eu. Mattis suspendisse parturient felis parturient aptent. Vitae ligula ante efficitur integer
+                    ullamcorper natoque metus pulvinar. Arcu blandit varius quam a massa augue. Accumsan eleifend proin
+                    aenean volutpat ad sodales. Netus praesent ipsum dolor dapibus sapien non.
+                </p>
+                <button class="boton learn-more boton-morado">
+                    <span class="circulo">
+                        <span class="icono flecha"></span>
+                    </span>
+                    <span class="texto-boton">Conocer más </span>
+                </button>
+            </header>
+        </article>
+    </section>
+</div>
