Implementacion inicial de formulario de login, sin estilos.

--- a/MythBots/src/app/components/paths/registrarse/registrarse.component.html
+++ b/MythBots/src/app/components/paths/registrarse/registrarse.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Registrate</h1>
+    <h1>Sign up</h1>
     <form [formGroup]="form" (submit)="registrar()">
         <div>
             <label for="Username">Username:</label>
