--- a/MythBots/src/app/components/paths/login/login.component.html
+++ b/MythBots/src/app/components/paths/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div>
+    <h1>Login</h1>
+    <form [formGroup]="loginForm" (submit)="login()">
+        <div>
+            <label for="Username">Username:</label>
+            <input type="text" name="username" formControlName="username">
+        </div>
+        <div>
+            <label for="Password">Password:</label>
+            <input type="text" name="password" formControlName="password">
+        </div>
+        <div>
+            <button>Login</button>
+        </div>
+    </form>
+    <span>Don't have an account? <a [routerLink]="['/register']">Sign up</a></span>
+</div>
