Actualizacion de footer, añadiendo logotipo

--- a/MythBots/src/app/components/layout/footer/footer.component.html
+++ b/MythBots/src/app/components/layout/footer/footer.component.html
@@ -2,7 +2,7 @@
     <!-- Sección 1: Logo y Eslogan -->
     <section class="footer__section footer__section--logo">
         <div class="footer__section-title">
-            <img src="../../../../../public/resources/mythbots_logo.png" alt="Logo" class="footer__logo-image" />
+            <img src="/resources/mythbots_logo.png" alt="Logo" class="footer__logo-image" />
         </div>
         <div class="footer__section-content">
             <p class="footer__slogan">{{ slogan }}</p>
