--- a/MythBots/src/app/components/layout/footer/footer.component.scss
+++ b/MythBots/src/app/components/layout/footer/footer.component.scss
@@ -5,6 +5,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0;
+    padding-left: 24px;
+    padding-right: 24px;
     background: $footer-gradient;
     color: $color-white;
 
@@ -40,7 +42,7 @@
 
     // Logotipo
     .footer__logo-image {
-        width: 120px;
+        width: 80px;
         height: auto;
         margin-bottom: 20px;
     }
