Actualizacion del navbar. añadiendo el logotipo dinamico y con redireccion

--- a/MythBots/src/app/components/layout/navbar/navbar.component.html
+++ b/MythBots/src/app/components/layout/navbar/navbar.component.html
@@ -1,7 +1,13 @@
 <nav class="navbar">
     <div class="navbar-frame">
         <!-- Logo de la empresa -->
-        <div class="navbar-logo"></div>
+        <a [routerLink]="logotipoRuta" class="navbar-logo-wrapper">
+            <img [src]="logotipo"
+                alt="Mythbots Logo"
+                class="navbar-logo"
+                onerror="this.style.background='#e0e0e0';
+                this.src='';"/>
+        </a>
 
         <!-- Línea separadora -->
         <div class="navbar-separator"></div>
