--- a/MythBots/src/app/components/layout/navbar/navbar.component.scss
+++ b/MythBots/src/app/components/layout/navbar/navbar.component.scss
@@ -72,6 +72,12 @@
     height: 56px;
     border-radius: 100px;
     background: url('https://via.placeholder.com/56') lightgray 50% / cover no-repeat;
+
+    .navbar-logo-wrapper {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+    }
 }
 
 .navbar-separator {
