--- a/MythBots/src/app/components/paths/home/home.component.scss
+++ b/MythBots/src/app/components/paths/home/home.component.scss
@@ -19,6 +19,7 @@
 
         &.impar {
             flex-direction: row;
+            border-radius: 20px;
 
             .impar-content {
                 display: flex;
@@ -61,6 +62,7 @@
 
         &.par {
             flex-direction: row-reverse;
+            border-radius: 20px;
 
             .par-content {
                 display: flex;
