Implementacion de 2 colores. para card Cuenta

--- a/MythBots/src/_variables.scss
+++ b/MythBots/src/_variables.scss
@@ -11,6 +11,7 @@ $color-primary-6: #683389;
 $color-primary-7: #8e66a6;
 $color-primary-8: #b399c4;
 $color-primary-9: #d9cce1;
+$color-primary-hover: #bd89ff;
 
 // Secundario - Rosa
 $color-secondary: #E01F96;
@@ -39,6 +40,8 @@ $color-tertiary-9: #ffe1cc;
 // Colores adicionales (ByN)
 $color-white: #FFFFFF;
 $color-black: #000000;
+$color-red: #c82525 ;
+$color-blue: #3a89be;
 
 // Escala de Grises
 $color-gray-1: #f5f5f5;
